template path update