@@ -2,10 +2,12 @@ package ro.utcn.homewave.Dao;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.core.io.ClassPathResource;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.stereotype.Repository;
 
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.security.MessageDigest;
@@ -53,7 +55,10 @@ public class UserDataAccessService implements UserDao {
         assert userId != null;
         String uuid=jdbcTemplate.queryForObject("select uuid from uuids where iduser=?",String.class,Integer.valueOf(userId));
         try {
-            template = new String(Files.readAllBytes(Paths.get("classpath:templates/ForgotPasswordTemplate.html")));
+            template = new String(
+                    new ClassPathResource("templates/ForgotPasswordTemplate.html").getInputStream().readAllBytes(),
+                    StandardCharsets.UTF_8
+            );
         } catch (IOException e) {
             e.printStackTrace();
             return "Eroare: Nu se poate citi template-ul";
